Using proper HTML

--- a/breaks.html
+++ b/breaks.html
@@ -1,1 +1,12 @@
-<p> This page has a single paragraph, but features a break<br>that makes it two lines instead of one.</p>
+<!DOCTYPE html>
+<!-- A page with a break -->
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title>A Break Page</title>
+	<head>
+	<body>
+		<p> This page has a single paragraph, but features a break<br>that makes it two lines instead of one.</p>
+	</body>
+</html>
+
