--- a/paragraphs.html
+++ b/paragraphs.html
@@ -1,2 +1,13 @@
-<p> <b>This paragraph has two lines containing text.  The first one is bolded.</b></p>
-<p> <i>The second paragraph is completely in italics.<i/></p>
+<!DOCTYPE html>
+<!-- A Paragraphs page -->
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title>My Paragraphs Page</title>
+	</head>
+	<body>
+		<p> <b>This paragraph has two lines containing text.  The first one is bolded.</b></p>
+		<p> <i>The second paragraph is completely in italics.<i/></p>
+	</body>
+</html>
+
