Link to cat gallery

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 		<title>My Gallery</title>
 	</head>
 	<body>
-		<p>A <b>photo</b> gallery application</p>
+		<h1>A photo gallery application</h1>
+		<div>
+		<h2>Galleries</h2>
+			<a href="Cats.html">Cats</a>
+		</div>
 	</body>
 	</html>
