Add image to cat gallery

--- a/Cats.html
+++ b/Cats.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<h1>A Page of Cats<h1>
-			<h2>There are no galleries here yet.</h2>
+		<img src="grumpy_cat.png"
 	</body>
 	</html>
 
