Adding more style

--- a/Cats.html
+++ b/Cats.html
@@ -4,10 +4,12 @@
 	<head>
 		<meta CHARSET="utf-8">
 		<title> CATS!</title>
+		<link rel="stylesheet" href="application.css">
 	</head>
 	<body>
-		<h1>A Page of Cats<h1>
-		<img src="grumpy_cat.png"
+		<h1>A Page of Cats</h1>
+		<img src="grumpy_cat.png" alt="grumpy_cat.png">
+		<img src="colonel_meow.jpg" alt="colonel_meow.jpg">
 	</body>
 	</html>
 
