--- a/dogs.html
+++ b/dogs.html
@@ -4,10 +4,11 @@
 	<head>
 		<meta CHARSET="utf-8">
 		<title> Dogs!</title>
+		<link rel="stylesheet" href="application.css">
 	</head>
 	<body>
-		<h1>A Page of Dogs<h1>
-		<img src="shibe.png"
+		<h1>A Page of Dogs</h1>
+		<img src="shibe.png" alt="shibe.png">
 	</body>
 	</html>
 
