--- a/index.html
+++ b/index.html
@@ -4,16 +4,11 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>My Gallery</title>
-		<style>
-			body {font-size: 20px;}
-			h1 {color: magenta;}
-			#introduction {color: gray;}
-			#galleries li a {color: green;} 
-		</style>
+		<link rel="stylesheet" href="application.css">
 	</head>
 	<body>
 		<h1>A photo gallery application</h1>
-		<div id=”introduction”>Below are a list of galleries that contain images of animals.</div>
+		<div id="introduction"> Below are a list of galleries that contain images of animals.</div>
 		<h2>Galleries</h2>
 		<div id="galleries">
 			<ul>
